eslint, prettier, general refactoring

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>🌊</title>
     <style>
-      body, html {
+      body,
+      html {
         margin: 0;
       }
     </style>
